--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,3 +113,9 @@ target_link_libraries(02_rock_paper_scissors_1 PRIVATE project_options project_w
 
 add_executable(02_rock_paper_scissors_2 02_rock_paper_scissors_2.cpp)
 target_link_libraries(02_rock_paper_scissors_2 PRIVATE project_options project_warnings project_third_parties)
+
+add_executable(03_rucksack_reorganization 03_rucksack_reorganization.cpp)
+target_link_libraries(03_rucksack_reorganization PRIVATE project_options project_warnings project_third_parties)
+
+add_executable(03_rucksack_reorganization_2 03_rucksack_reorganization_2.cpp)
+target_link_libraries(03_rucksack_reorganization_2 PRIVATE project_options project_warnings project_third_parties)
