--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,3 +209,9 @@ target_link_libraries(14_regolith_reservoir_1 PRIVATE project_options project_wa
 add_executable(14_regolith_reservoir_2 14_regolith_reservoir_2.cpp)
 target_link_libraries(14_regolith_reservoir_2 PRIVATE project_options project_warnings project_third_parties)
 
+add_executable(15_beacon_exclusion_zone_1 15_beacon_exclusion_zone_1.cpp)
+target_link_libraries(15_beacon_exclusion_zone_1 PRIVATE project_options project_warnings project_third_parties)
+
+add_executable(15_beacon_exclusion_zone_2 15_beacon_exclusion_zone_2.cpp)
+target_link_libraries(15_beacon_exclusion_zone_2 PRIVATE project_options project_warnings project_third_parties)
+
