--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,3 +215,9 @@ target_link_libraries(15_beacon_exclusion_zone_1 PRIVATE project_options project
 add_executable(15_beacon_exclusion_zone_2 15_beacon_exclusion_zone_2.cpp)
 target_link_libraries(15_beacon_exclusion_zone_2 PRIVATE project_options project_warnings project_third_parties)
 
+add_executable(16_proboscidea_volcanium_1 16_proboscidea_volcanium_1.cpp)
+target_link_libraries(16_proboscidea_volcanium_1 PRIVATE project_options project_warnings project_third_parties)
+
+add_executable(16_proboscidea_volcanium_2 16_proboscidea_volcanium_2.cpp)
+target_link_libraries(16_proboscidea_volcanium_2 PRIVATE project_options project_warnings project_third_parties)
+
